--- a/adminpanel/pom.xml
+++ b/adminpanel/pom.xml
@@ -52,6 +52,14 @@
       <classifier>sources</classifier>
       <scope>test</scope>
     </dependency>
+     <dependency>
+            <groupId>com.google.gwt.inject</groupId>
+            <artifactId>gin</artifactId>
+            <version>2.0.0</version>
+            <classifier/>
+	</dependency>
+    
+    
   </dependencies>
 
   <build>
