--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,39 +5,58 @@
 
 <web-app>
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.indexisto.front.adminpanel.server.GreetingServiceImpl</servlet-class>
-  </servlet>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
 
-  <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/adminpanel/greet</url-pattern>
-  </servlet-mapping>
-  
-  
-  <servlet>
-    <servlet-name>UserRPCService</servlet-name>
-    <servlet-class>com.indexisto.front.adminpanel.server.UserRPCServiceImpl</servlet-class>
-    <!--  
-    <init-param>
-    		
-			<param-name>log4j-properties-location</param-name>
-			<param-value>WEB-INF/log4j.xml</param-value>
-	</init-param>
-	-->
-  </servlet>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
-  <servlet-mapping>
-    <servlet-name>UserRPCService</servlet-name>
-    <url-pattern>/adminpanel/UserRPCService</url-pattern>
-  </servlet-mapping>
-  
 
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>adminpanel.html</welcome-file>
-  </welcome-file-list>
+	<servlet>
+		<servlet-name>dispatcher</servlet-name>
+		<servlet-class>
+			org.gwtrpcspring.RemoteServiceDispatcher
+		</servlet-class>
+	</servlet>
+
+
+	<servlet-mapping>
+		<servlet-name>dispatcher</servlet-name>
+		<url-pattern>/adminpanel/dispatcher</url-pattern>
+	</servlet-mapping>
+
+
+	<!-- Servlets -->
+	<servlet>
+		<servlet-name>greetServlet</servlet-name>
+		<servlet-class>com.indexisto.front.adminpanel.server.GreetingServiceImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>greetServlet</servlet-name>
+		<url-pattern>/adminpanel/greet</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>UserRPCService</servlet-name>
+		<servlet-class>com.indexisto.front.adminpanel.server.UserRPCServiceImpl</servlet-class>
+		<!-- <init-param> <param-name>log4j-properties-location</param-name> <param-value>WEB-INF/log4j.xml</param-value> 
+			</init-param> -->
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>UserRPCService</servlet-name>
+		<url-pattern>/adminpanel/UserRPCService</url-pattern>
+	</servlet-mapping>
+
+
+	<!-- Default page to serve -->
+	<welcome-file-list>
+		<welcome-file>adminpanel.html</welcome-file>
+	</welcome-file-list>
 
 </web-app>
